# SimMovieMaker

./: .gitignore  README.md  SimMovieMaker.py  build.bat  environment.yml  installer.iss  main.py  pyproject.toml  setup.py
.claude/: settings.local.json
simmovimaker/: __init__.py  __main__.py  app.py  cli.py  dialogs.py  ffmpeg_utils.py  video_ops.py
